# k8s-playground

./: README.md  explanation.md
.github/workflows/: build-backend.yml  build-frontend.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
db/: init.sql
frontend/: Dockerfile  index.html  login.html  profile.html  register.html  script.js  style.css
k8s-manifests/: backend-configmap.yaml  backend-deployment.yaml  backend-secret.yaml  backend-service-lb.yaml  frontend-deployment.yaml  frontend-service-lb.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-init-configmap.yaml  postgres-secret.yaml
