[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
tracing-subscriber = "0.3.19"
bcrypt = "0.17.0"
once_cell = "1.21.3"
uuid = { version = "1.17.0", features = ["v4"] }
hyper = "1.6.0" 
chrono = "0.4.41"
tower-http = { version = "0.6.6", features = ["cors"] }

